gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/deprecated6760.d
version https://git-lfs.github.com/spec/v1
oid sha256:b6acbc7a971d901f85a13648dd4691865df15ba5347721c8be3a6905ee56d893
size 513
